--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -47,7 +47,6 @@
 <!-- search button end-->
     </div>
 
-    {% if orders %}
     <table class="table table-striped table-hover">
         <thead class="thead-dark">
             <tr>
@@ -62,6 +61,7 @@
                 <th>OPERATIONS</th>
             </tr>
         </thead>
+        {% if orders %}
         <tbody>
             {% for order in orders %}
             <tr>
@@ -74,7 +74,7 @@
                 <td>{{ order.order_id }}</td>
                 <td>
                     <div class="btn-group">
-                        <button id="statusUpdater" type="button" class="btn btn-sm btn-info btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                        <button id="statusUpdater" type="button" class="btn btn-sm btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="statusUpdater">
                             {% for status in get_all_order_status() %}
                             <a class="dropdown-item {% if order.status==status %}disabled{% endif %}" href="{{ url_for('order.order_update_status', channel_id=order.channel_id, order_id=order.id, status=status) }}">{{ status | order_status_2_name }}</a>
@@ -89,10 +89,8 @@
             </tr>
             {% endfor %}
         </tbody>
+        {% endif %}
     </table>
-    {% else %}
-    <h3>No orders here.</h3>
-    {% endif %}
 
 <script type="text/javascript">
 // post function
@@ -156,7 +154,7 @@ $('#searchSubmitButton').on("click",function(){
 
 // select all order checkbox
 $('#checkAllOrder').click(function() {
-    $('.orders_checkbox').not(this).prop('checked', this.checked);
+    $('.orders_checkbox').prop('checked', this.checked);
 });
 </script>
 {% endblock %}
