--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </td>
                 <td>{{ order.channel.name }}</td>
-                <td><a id="{{order.id}}" class="openOrderDetailBtn">{{ order.order_id }}</a></td>
+                <td><a id="{{order.id}}" class="openOrderDetailBtn btn btn-sm btn-outline-secondary" data-toogle="tooltip" data-palcement="bottom" title="Click to show order detials">{{ order.order_id }}</a></td>
                 <td>{{ order.status|order_status_2_name }}</td>
                 <td>
                     <a role="button" href="{{ url_for('order.order_detail', order_id=order.id) }}" class="btn btn-primary btn-sm">Detail</a>
