show order details line fast

--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -202,7 +202,7 @@ $('.openOrderDetailBtn').on('click', function(e) {
     }
     
     // show
-    $('#order_detail_'+order_id).toggle('slow');
+    $('#order_detail_'+order_id).toggle('fast');
 });
 </script>
 {% endblock %}
