--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -87,7 +87,7 @@
                 <td>{{ order.channel.name }}</td>
                 <td><a id="{{order.id}}" class="openOrderDetailBtn btn btn-sm btn-outline-secondary" data-toogle="tooltip" data-palcement="bottom" title="Click to show order detials">{{ order.order_id }}</a></td>
                 <td>{{ order.status|order_status_2_name }}</td>
-                <td>{{ order.total }}</td>
+                <td>${{ order.total }}</td>
             </tr>
             <tr id="order_detail_{{order.id}}" style="display: none;">
                 <td colspan="100">
