--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -73,6 +73,7 @@
                 <th>OrderId</th>
                 <th>Status</th>
                 <th>Total</th>
+                <th>Time</th>
             </tr>
         </thead>
         {% if orders %}
@@ -88,6 +89,7 @@
                 <td><a id="{{order.id}}" class="openOrderDetailBtn btn btn-sm btn-outline-secondary" data-toogle="tooltip" data-palcement="bottom" title="Click to show order detials">{{ order.order_id }}</a></td>
                 <td>{{ order.status|order_status_2_name }}</td>
                 <td>${{ order.total }}</td>
+                <td>{{ order.timestamp | format_datetime('yyyy-mm-dd') }}</td>
             </tr>
             <tr id="order_detail_{{order.id}}" style="display: none;">
                 <td colspan="100">
