--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -2,12 +2,12 @@
 <title>{% block title %}{% endblock %} - Gondwana</title>
 <!-- add Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<link rel="stylesheet" href="/static/main.css">
 <!-- https://stackoverflow.com/questions/43598832/getjson-is-not-a-function/48969747#48969747 -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+<link rel="stylesheet" href="/static/main.css">
 <script src="/static/main.js"></script>
 <!-- add Bootstrap end -->
 
@@ -56,7 +56,7 @@
 <!-- flash message alert end -->
 
     <section>
-        <div class="page-header">
+        <div class="page-header mb-3">
             {% block header %}{% endblock %} <div class="float-right">{% block button %}{% endblock %}</div>
         </div>
         <div class="page-content">
