--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -72,6 +72,7 @@
                 <th>Channel</th>
                 <th>OrderId</th>
                 <th>Status</th>
+                <th>Express</th>
                 <th>Total</th>
                 <th>Time</th>
             </tr>
@@ -88,6 +89,7 @@
                 <td>{{ order.channel.name }}</td>
                 <td><a id="{{order.id}}" class="openOrderDetailBtn btn btn-sm btn-outline-secondary" data-toogle="tooltip" data-palcement="bottom" title="Click to show order detials">{{ order.order_id }}</a></td>
                 <td>{{ order.status|order_status_2_name }}</td>
+                <td>{{ order.shipping_method }}</td>
                 <td>${{ order.total }}</td>
                 <td>{{ order.timestamp | format_datetime('yyyy-mm-dd') }}</td>
             </tr>
