--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -88,7 +88,7 @@
                     </div>
                 </td>
                 <td>{{ order.channel.name }}</td>
-                <td><a id="{{order.id}}" class="openOrderDetailBtn btn btn-sm btn-outline-secondary" data-toogle="tooltip" data-palcement="bottom" title="Click to show order detials">{{ order.order_id }}</a></td>
+                <td><a value="{{order.id}}" class="openOrderDetailBtn btn btn-sm btn-outline-secondary" data-toogle="tooltip" data-palcement="bottom" title="Click to show order detials">{{ order.order_id }}</a></td>
                 <td>{{ order.status|order_status_2_name }}</td>
                 <td>{{ order.shipping_method }}</td>
                 <td data-toogle="tooltip" data-palcement="bottom" title="{{ order.memo }}">{{ order.memo|truncate(8) }}</td>
@@ -199,7 +199,7 @@ $('.orderStatusBatchingOptions').on("click",function(){
 // https://stackoverflow.com/questions/3239598/how-can-i-get-the-id-of-an-element-using-jquery
 $('.openOrderDetailBtn').on('click', function(e) {
     e.preventDefault();
-    var order_id = $(this).attr('id');
+    var order_id = $(this).attr('value');
     
     // https://zhidao.baidu.com/question/516934779.html
     if ($('#details_'+order_id+' tr').length <= 0) {
