--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -109,7 +109,7 @@
                         <div class="dropdown-menu">
                             {% for event in events %}
                             <div class="dropdown-item form-check">
-                                <input class="eventItemCheckbox form-check-input" type="checkbox" value="" id="checkbox_{{order.id}}_{{event.id}}" order_id="{{ order.id }}" event_id="{{ event.id }}">
+                                <input class="eventItemCheckbox form-check-input" type="checkbox" value="" id="checkbox_{{order.id}}_{{event.id}}" order_id="{{ order.id }}" event_id="{{ event.id }}" {% if event in order.events %}checked{% endif %}>
                                 <label class="form-check-label" for="checkbox_{{order.id}}_{{event.id}}">{{ event.name }}</label>
                             </div>
                             {% endfor %}
@@ -169,7 +169,8 @@ $('.eventItemCheckbox').change(function() {
 
     $.get('/api/order/event/'+s+'/'+order_id+'/'+event_id, function(r) {
         if ($.inArray(event_id, r.events) < 0) { // add event to order failed
-            $(this).prop('checked', false); // set checkbox unchecked
+            origin_checked = ischecked ? false: true;
+            $(this).prop('checked', origin_checked); // reset checkbox
         }
     });
 });
